# QuestGen

./: Cargo.toml  questions.txt  testing.ipynb  testing.py
src/: main.rs  mongo_class.rs  set_up_graph.rs  set_up_questions.rs
