[package]
name = "quest_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rocket = "0.5.0-rc.2"
tokio = "1.21.2"
futures = "0.3"

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["tokio-runtime"]